trunk/scalacommandargs2/target/test-classes/failure1.txt
/home/luca/workspace/scala-command/src/test/scala/code/lucamarrocco/scala/command/ScalaCommandTest.scala:9: error: not found: value assertThat
                        assertThat(command, is equalTo "")
                        ^
one error found
